<?xml version="1.0" encoding="utf-8"?>
<!--
    SPDX-FileCopyrightText: 2024-2026 Andrew Gunnerson
    SPDX-License-Identifier: GPL-3.0-only
-->
<resources>
    <!-- Preference headers -->
    <string name="pref_header_devices">Devices</string>
    <string name="pref_header_usb">USB</string>
    <string name="pref_header_about">About</string>
    <string name="pref_header_debug">Debug</string>

    <!-- Device preferences -->
    <string name="pref_add_device_name">Add mass storage device</string>
    <string name="pref_add_device_desc">Add a new CD-ROM, read-only disk, or writable disk device.</string>
    <string name="pref_device_name_cdrom">CD-ROM</string>
    <string name="pref_device_name_disk_ro">Read-only disk</string>
    <string name="pref_device_name_disk_rw">Writable disk</string>

    <!-- USB preferences -->
    <string name="pref_active_functions_name">Active USB gadget functions</string>
    <string name="pref_active_functions_desc_none">(No active functions. Press to refresh.)</string>
    <string name="pref_enable_mass_storage_name">Apply settings</string>
    <string name="pref_enable_mass_storage_desc">Enable or disable emulating the specified mass storage devices.</string>

    <!-- About "preference" -->
    <string name="pref_version_name">Version</string>

    <!-- Debug preferences -->
    <string name="pref_open_log_dir_name">Open log directory</string>
    <string name="pref_open_log_dir_desc">Open the log directory in the system file manager (DocumentsUI).</string>

    <!-- Alerts -->
    <string name="action_details">Details</string>
    <string name="dialog_error_details_title">Error details</string>
    <string name="alert_query_state_failure">Failed to query USB controller state.</string>
    <string name="alert_apply_state_failure">Failed to configure USB controller.</string>
    <string name="alert_reapply_required">The changes will take effect the next time the settings are applied.</string>
    <string name="alert_not_local_file">Failed to add image because it is not a local file.</string>
    <string name="alert_not_local_file_details">The image could not be added because it is not a local file. Even if the third party app goes through the effort to provide a file descriptor supporting random access, Android\'s limitations on reopening files prevents it from being used.</string>
    <string name="alert_create_image_failure">Failed to create new writable disk image.</string>
    <string name="alert_resize_image_failure">Failed to resize writable disk image.</string>
    <string name="alert_browser_not_found">No web browser is available.</string>
    <string name="alert_documentsui_not_found">Android\'s builtin file manager (DocumentsUI) is unavailable.</string>

    <!-- Add device dialog -->
    <string name="dialog_device_title_add">Add new device</string>
    <string name="dialog_device_title_edit">Edit device</string>
    <string name="dialog_device_add_cdrom">Add existing CD-ROM image</string>
    <string name="dialog_device_add_disk_ro">Add existing read-only disk image</string>
    <string name="dialog_device_add_disk_rw">Add existing writable disk image</string>
    <string name="dialog_device_create_disk_rw">Create new writable disk image</string>
    <string name="dialog_device_resize_disk_rw">Resize writable disk image</string>
    <string name="dialog_device_switch_cdrom">Switch to CD-ROM</string>
    <string name="dialog_device_switch_disk_ro">Switch to read-only disk</string>
    <string name="dialog_device_switch_disk_rw">Switch to writable disk</string>
    <string name="dialog_device_delete">Delete device</string>

    <!-- Image size dialog -->
    <string name="dialog_image_size_title">Image size</string>
    <string name="dialog_image_size_create_message">The image will be created as a sparse file. The image will start consuming space on disk only after data is written to it.</string>
    <string name="dialog_image_size_resize_message">Resize the existing image from %1$d B. Note that this does not change the contents of the image. It will need to be manually repartitioned to make use of any extra space.</string>
    <string name="dialog_image_size_units_message">Both IEC (KiB/MiB/GiB) and SI (KB/MB/GB) suffixes are supported.</string>
    <string name="dialog_image_size_truncate_warning">This is smaller than the original size. Truncating the image may lead to data loss.</string>
</resources>
